Bug 906147 - Make sure we lock component alpha textures in the correct order to prevent deadlocks. r=nrc